language/move-compiler/tests/move_check/naming/unbound_constant.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/naming/unbound_constant.move:4:13
  │
4 │         let x = CONSTANT;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_constant.move:4:17
  │
4 │         let x = CONSTANT;
  │                 ^^^^^^^^ Unbound constant 'CONSTANT'

warning[W09002]: unused variable
  ┌─ tests/move_check/naming/unbound_constant.move:5:13
  │
5 │         let y = Self::CONSTANT;
  │             ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_constant.move:5:17
  │
5 │         let y = Self::CONSTANT;
  │                 ^^^^^^^^^^^^^^ Invalid module access. Unbound constant 'CONSTANT' in module '0x42::M'

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_constant.move:6:13
  │
6 │         0 + CONSTANT + Self::CONSTANT;
  │             ^^^^^^^^ Unbound constant 'CONSTANT'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_constant.move:6:24
  │
6 │         0 + CONSTANT + Self::CONSTANT;
  │                        ^^^^^^^^^^^^^^ Invalid module access. Unbound constant 'CONSTANT' in module '0x42::M'

warning[W09002]: unused variable
   ┌─ tests/move_check/naming/unbound_constant.move:13:13
   │
13 │         let x = CONSTANT;
   │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/naming/unbound_constant.move:13:17
   │
13 │         let x = CONSTANT;
   │                 ^^^^^^^^ Unbound constant 'CONSTANT'

warning[W09002]: unused variable
   ┌─ tests/move_check/naming/unbound_constant.move:14:13
   │
14 │         let y = Self::CONSTANT;
   │             ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'

error[E03002]: unbound module
   ┌─ tests/move_check/naming/unbound_constant.move:14:17
   │
14 │         let y = Self::CONSTANT;
   │                 ^^^^ Unbound module alias 'Self'

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/naming/unbound_constant.move:15:13
   │
15 │         0 + CONSTANT + Self::CONSTANT;
   │             ^^^^^^^^ Unbound constant 'CONSTANT'

error[E03002]: unbound module
   ┌─ tests/move_check/naming/unbound_constant.move:15:24
   │
15 │         0 + CONSTANT + Self::CONSTANT;
   │                        ^^^^ Unbound module alias 'Self'

